att title and meta tags description

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Simulador Amortização Financeira"
-      content="Está endividado querendo encurtar seu prazo e seus juros? Nós te ajudamos a calcular tudo certinho."
+      name="description"
+      content="Simule uma amortização de financiamento agora mesmo."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Faça sua simulação de amortização financeira</title>
+    <title>Simulador de Amortização Financeira 2022</title>
   </head>
   <body>
     <noscript>Você precisa do JavaScript habilitado para rodar esta aplicação.</noscript>
