finish and deploy

--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,10 @@
       name="description"
       content="Simule uma amortização de financiamento agora mesmo."
     />
+    <meta name="keywords" content="simulador, amortizacao, financeira, simulador amortizacao financeira, amortizacao financeira," />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta name="robots" content="index, follow" />
 
     <title>Simulador de Amortização Financeira 2022</title>
   </head>
